# ping-pong

./: .gitignore  Dockerfile  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml
logs/: client_1.txt  client_2.txt  server.txt
pkg/: logger.py
usecases/: client.py  server.py
