[tool.poetry]
name = "is-test-case"
version = "0.1.0"
description = ""
authors = ["Alex <barsoval12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.280"

[tool.ruff]
select = ["ALL"]  # Все правила
ignore = ["D", "ANN101", "ANN102", "F821", "DTZ", "N999", "RUF001", "TD", "FIX002", "PTH"]  # Исключены

fixable = ["ALL"]  # Подлежащие автофиксу
unfixable = []

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "alembic",
    '.mypy_cache',
    ".yml",
    ".md",
    "database"
]

line-length = 120  # Длина строки
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py310"
allowed-confusables = ["а", "А", "б", "Б", "в", "В", "г", "Г", "е", "Е", "з", "З", "и", "И",
"к", "К", "м", "М", "н", "Н", "о", "О", "р", "Р", "с", "С", "у", "У", "ф", "Ф", "х", "Х"]

[build-system]
requires = ["poetry-core>=2.1.3"]
build-backend = "poetry.core.masonry.api"